--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/futura-pt');
+
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  color: #9e9e9e !important;
+  background: #000 !important;
+  font-family: 'Futura PT', sans-serif;
+}
+
+body {
+  background: #000;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
