--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 .container {
@@ -21,7 +22,6 @@
 }
 
 .addLeft {
-  border: 1px solid #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,6 +29,11 @@
   padding: 0 60px;
   position: relative;
   border-radius: 30px;
+  background: #000;
+}
+
+.addLeft * {
+  color: #fff;
 }
 
 .controller {
@@ -53,89 +58,121 @@
 }
 
 .addRight {
-    width: 16%;
-    height: 100%;
-    border-radius: 30px;
-    background: #e4b717 !important;
-    display: flex;
-    align-items: center;
-    padding: 20px 10px;
-    gap: 10px;
-    flex-direction: column;
+  width: 16%;
+  height: 100%;
+  border-radius: 30px;
+  background: #e4b717 !important;
+  display: flex;
+  align-items: center;
+  padding: 20px 10px;
+  gap: 10px;
+  flex-direction: column;
 }
 
 .cart {
-    display: flex;
-    justify-content: center;
-    width: fit-content;
-    padding: 25px;
-    border-radius: 50%;
-    background: transparent !important;
-    border: 1px solid #fff;
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  padding: 25px;
+  border-radius: 50%;
+  background: transparent !important;
+  border: 1px solid #fff;
 }
 
-.cart *, .select, .select img {
-    background: transparent !important;
+.cart *,
+.select,
+.select img {
+  background: transparent !important;
 }
 
 .cart > h3 {
-    background: transparent !important;
+  background: transparent !important;
 }
 
 .catS {
-    display: flex;
-    justify-content: space-between;align-items: center;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
 }
 
 .cat {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background: #fff !important;
-    padding: 20px 30px;
-    border-radius:20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  background: #fff !important;
+  padding: 20px 30px;
+  border-radius: 20px;
 }
 
 .catTop {
-    border: 1px solid #8A8A8A;
-    width: 110px;
-    height: 110px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+  border: 1px solid #8a8a8a;
+  width: 110px;
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
 .cat * {
-    background: transparent !important;
+  background: transparent !important;
 }
 
 .cat > h4 {
-    color: #8A8A8A;
+  color: #8a8a8a;
 }
 
 .catController {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 1rem;
 }
 
 .catControl {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: 1px solid #8A8A8A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid #8a8a8a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .catControl:last-child {
-    border: 1px solid #e4b717;
+  border: 1px solid #e4b717;
+}
+.newProducts {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.newProducts > h3 {
+  font-size: 23px;
+}
+
+.newProductsWrapper, .newsWrapper {
+  display: flex;
+  gap: 1.250975rem;
+  flex-wrap: wrap;
+}
+
+.loadMore {
+  width: fit-content;
+  margin: auto;
+  padding: 12px 25px;
+  border-radius: 50px;
+  border: 1px solid #179ae4;
+  color: #179ae4;
+  font-size: 17px;
+  font-weight: 700;
+  background: transparent;
+  cursor: pointer;
 }
