--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,13 +5,11 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: #9e9e9e !important;
-  background: #000 !important;
   font-family: 'Futura PT', sans-serif;
 }
 
 body {
-  background: #000;
+  background: #FAF8F8;
 }
 
 li {
@@ -20,4 +18,10 @@ li {
 
 a {
   text-decoration: none;
+}
+
+button {
+  border: none;
+  background: transparent;
+  cursor: pointer;
 }
