--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -126,3 +126,18 @@
 
     transform: rotate(0.5turn);
 }
+
+.Kategor {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: 360px;
+    margin-top: 280px;
+    width: 1180px;
+    height: 193px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
+    z-index: 999;
+}
