--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -128,9 +128,8 @@
 }
 
 .Kategor {
+    padding: 10px 5px;
     position: absolute;
-    justify-content: center;
-    align-items: center;
     display: flex;
     margin-left: 360px;
     margin-top: 280px;
@@ -140,4 +139,65 @@
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
     z-index: 999;
+}
+
+.Kategor__section {
+    display: flex;
+}
+
+.Kategor__left {
+    font-size: 18px;
+    font-weight: 700;
+    border-right: 1px solid #cacaca;
+    width: 200px;
+}
+
+.Kategor__left div {
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    transition: .5s ease-in-out;
+}
+
+.Kategor__left h1{
+    font-size: 17px;
+    font-weight: 600;
+    padding: 8px 12px;
+    border: none;
+    background: none;
+}
+
+.Kategor__left div:hover {
+    cursor: pointer;
+    color: #FFFFFF;
+    background-color: #E4B717;
+    border-radius: 20px;
+}
+
+.Kategor__right {
+    justify-content: center;
+    height: 10px;
+    align-items: center;
+}
+
+.table {
+    display: flex;
+    text-align: center;
+    gap: 150px;
+    justify-content: center;
+    padding: 10px 20px;
+}
+
+.table__top{
+    font-size: 15px;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.table ul li{
+    padding-top: 10px;
+}
+
+.table ul li a {
+    color: #000000;
 }
