--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -185,7 +185,7 @@
     text-align: center;
     gap: 150px;
     justify-content: center;
-    padding: 10px 20px;
+    padding: 10px 25px;
 }
 
 .table__top{
@@ -199,5 +199,6 @@
 }
 
 .table ul li a {
-    color: #000000;
+    color: #666565;
+    font-weight: 700;
 }
