--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -4,8 +4,13 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: #1212123e;
+  background: rgba(18, 18, 18, 0.65);
   z-index: 100000;
+}
+
+.dn {
+  display: none;
+  transition: 0.2s linear;
 }
 
 .authent {
@@ -14,6 +19,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
+  z-index: 10000;
 }
 
 .auth {
