--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,64 +1,204 @@
-.header {
-  background: #fff;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 1px 10px 1px rgba(214, 214, 214, 0.17);
+.Header {
+    display: flex;
+    align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 10px 1px rgba(118, 118, 118, 0.17);
 }
 
-.container {
-  width: 1180px;
-  padding: 12px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.HeaderButton {
+    display: flex;
+    align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px 1px rgba(175, 175, 175, 0.19);
 }
 
-.search {
-  border: 1px solid #d9d9d9;
-  border-radius: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 8px 20px;
-  width: 40%;
+.Header__section {
+    gap: 48px;
+    display: flex;
+    align-items: center;
+    width: 1180px;
+    padding: 10px 0;
+    margin: auto;
 }
 
-.search > input {
-  border: none;
-  outline: navajowhite;
-  width: 95%;
-  font-size: 17px;
+.HeaderButton__section {
+    gap: 35px;
+    display: flex;
+    align-items: center;
+    width: 1180px;
+    padding: 10px 0;
+    margin: auto;
 }
 
-.search > img {
+.Header__search {
+    width: 43%;
+    border: 1px solid #D9D9D9;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border-radius: 50px;
+}
+
+.Header__search input {
+    padding: 9px 10px;
+    font-size: 17px;
+    color: #666565;
+    width: 90%;
+    border: none;
+}
+
+.Header__search input:focus-visible {
+    outline: none;
+}
+
+.Header__search image {
+    padding-right: 10px;
+}
+
+.select {
     cursor: pointer;
+    align-items: center;
+    display: flex;
+    gap: 10px;
 }
 
-.contra,
-.contra * {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
+.select select {
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 160%;
+    border: none;
 }
 
-.image {
-  padding: 10px;
-  border: 1px solid #d9d9d9;
-  border-radius: 50px;
-  cursor: pointer;
+
+.select select:focus-visible {
+    outline: none;
 }
 
-.contra select {
-  outline: none;
-  border: none;
-  font-size: 18px;
-  width: 50px;
-  font-weight: 700;
+.call {
+    cursor: pointer;
+    align-items: center;
+    gap: 10px;
+    font-weight: 700;
+    font-size: 17px;
+    display: flex;
 }
 
-.ads {
-  margin-left: 40px;
+.order {
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+}
+
+.katagorie {
+    cursor: pointer;
+    gap: 11px;
+    background: none;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    color: #E4B717;
+    width: 161px;
+    height: 41px;
+    border: 1px solid #E4B717;
+    filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+    border-radius: 50px;
+}
+
+.Header__down a {
+    font-size: 18px;
+    font-weight: 700;
+    color: #000;
+    text-decoration: none;
+    transition: .5s ease-in-out;
+}
+
+.Header__down a:hover {
+    color: #E4B717;
+}
+
+.Header__down img {
+    transition: .2s ease-in-out;
+}
+
+.Header__down img:hover {
+
+    transform: rotate(0.5turn);
+}
+
+.Kategor {
+    padding: 10px 5px;
+    position: absolute;
+    display: flex;
+    margin-left: 360px;
+    margin-top: 280px;
+    width: 1180px;
+    height: 193px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
+    z-index: 999;
+}
+
+.Kategor__section {
+    display: flex;
+}
+
+.Kategor__left {
+    font-size: 18px;
+    font-weight: 700;
+    border-right: 1px solid #cacaca;
+    width: 200px;
+}
+
+.Kategor__left div {
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    transition: .5s ease-in-out;
+}
+
+.Kategor__left h1{
+    font-size: 17px;
+    font-weight: 600;
+    padding: 8px 12px;
+    border: none;
+    background: none;
+}
+
+.Kategor__left div:hover {
+    cursor: pointer;
+    color: #FFFFFF;
+    background-color: #E4B717;
+    border-radius: 20px;
+}
+
+.Kategor__right {
+    justify-content: center;
+    height: 10px;
+    align-items: center;
+}
+
+.table {
+    display: flex;
+    text-align: center;
+    gap: 150px;
+    justify-content: center;
+    padding: 10px 25px;
+}
+
+.table__top{
+    font-size: 15px;
+    width: 100%;
+    padding-left: 20px;
+}
+
+.table ul li{
+    padding-top: 10px;
+}
+
+.table ul li a {
+    color: #666565;
+    font-weight: 700;
 }
