changed some folder's and file's name, removed allCategories page then added to index.tsx

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,21 +19,29 @@
   width: 100%;
   height: 410px;
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .addLeft {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 82%;
+  width: 100%;
   padding: 0 60px;
   position: relative;
+  height: 100%;
   border-radius: 30px;
   background: #000;
+  position: relative;
 }
 
 .addLeft * {
   color: #fff;
+}
+
+.addLeft > img {
+  position: absolute;
+  left: 50%;
 }
 
 .controller {
@@ -55,18 +63,6 @@
 
 .circle:first-child {
   background: #fff !important;
-}
-
-.addRight {
-  width: 16%;
-  height: 100%;
-  border-radius: 30px;
-  background: #e4b717 !important;
-  display: flex;
-  align-items: center;
-  padding: 20px 10px;
-  gap: 10px;
-  flex-direction: column;
 }
 
 .cart {
