--- a/styles/deliveriey.module.css
+++ b/styles/deliveriey.module.css
@@ -5,6 +5,10 @@
     margin: auto;
 }
 
+.card * h1 {
+    color: #000;
+}
+
 .Delivery__section {
     gap: 8px;
     display: flex;
@@ -59,6 +63,10 @@
     justify-content: flex-end;
     display: flex;
     gap: 7px;
+}
+
+.remove > p {
+    color: #9B9B9B;
 }
 
 
