--- a/styles/allCategoriy.module.css
+++ b/styles/allCategoriy.module.css
@@ -125,6 +125,7 @@
 
 
 .carusel__card {
+    position: relative;
     padding: 22px 12px;
     display: flex;
     align-items: center;
@@ -158,7 +159,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 100%;
 }
 
 .controllerProduct>button {
