modified files and added folders for images

--- a/styles/allCategoriy.module.css
+++ b/styles/allCategoriy.module.css
@@ -199,7 +199,7 @@
     height: 305px;
     left: 370px;
     top: 2451px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.28), rgba(0, 0, 0, 0.28)), url("../public//businassman.png");
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.28), rgba(0, 0, 0, 0.28)), url("../public/images/businassman.png");
     border-radius: 20px;
 }
 
