--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background: #fff;
-    width: 280px;
+    width: 23.725%;
     height: 331px;
     border-radius: 20px;
     justify-content: space-between;
