--- a/styles/changePass.module.css
+++ b/styles/changePass.module.css
@@ -2,11 +2,12 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    position: absolute;
+    position: fixed;
     width: 100%;
     background: rgba(18, 18, 18, 0.65);
     height: 100%;
     z-index: 9999;
+    top: 0;
 }
 
 .ChangeForm {
