--- a/styles/allCategoriy.module.css
+++ b/styles/allCategoriy.module.css
@@ -137,6 +137,7 @@
     height: 228.49px;
     background: #FAF8F8;
     border-radius: 20px;
+    padding: 10px 15px;
 }
 
 .carusel__card a h3 {
@@ -147,11 +148,14 @@
     font-size: 14px;
 }
 
-.carusel__card a div {
+.carusel__card a div:nth-child(2) {
     width: 37.81px;
     height: 38.7px;
-    padding-right: 15px;
-    padding-left: 15px;
+}
+
+.carusel__card a div:last-child > img {
+    width: 17px;
+    height: 17px;
 }
 
 .controllerProduct {
@@ -163,8 +167,8 @@
 }
 
 .controllerProduct>button {
-    width: 58px;
-    height: 58px;
+    width: 43px;
+    height: 43px;
     background: #fff;
     box-shadow: 0px 1px 9px rgba(162, 162, 162, 0.25);
     border-radius: 100px;
@@ -175,9 +179,6 @@
     cursor: pointer;
 }
 
-.controllerProduct>button:last-child {
-    margin-right: -1rem;
-}
 
 .carusel {
     align-items: center;
