--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: #1212123e;
+  background: rgba(18, 18, 18, 0.65);
   z-index: 100000;
 }
 
