--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -70,6 +70,11 @@
     color: #8A8A8A;
 }
 
+.checkBox__input input {
+    border: none;
+    outline: none;
+}
+
 .checkBox input {
     width: 17px;
     height: 17px;
@@ -77,7 +82,7 @@
 
 .section__right {
     padding-top: 20px;
-    gap: 5px;
+    gap: 12.5px;
     display: flex;
     flex-wrap: wrap-reverse;
 }
