--- a/styles/multiRangeSlider.module.css
+++ b/styles/multiRangeSlider.module.css
@@ -14,8 +14,15 @@
   margin-top: 15px;
 }
 
+.thumb > div {
+  width: 100%;
+}
+
 .thumb__left {
   z-index: 10;
+  position: relative;
+  top: -2px;
+  width: 200px !important;
 }
 
 .thumb__right {
