--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -17,6 +17,13 @@
     font-size: 16px;
 }
 
+.logo {
+    text-transform: uppercase;
+    color: #E4B717 !important;
+    font-size: 35px !important;
+    font-weight: 700;
+}
+
 .center {
     display: flex;
     justify-content: space-between;
@@ -40,4 +47,38 @@
 .links {
     display: flex;
     gap: 10px;
+}
+
+@media screen and (max-width:1180px) {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        width: 1000px;
+    }
+
+    .navigation {
+        gap: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .last {
+        display: flex;
+        gap: 5px;
+        flex-direction: column;
+    }
+
+    .links {
+        display: flex;
+        gap: 5px;
+    }
+
+    .last h3 {
+        font-size: 17px;
+    }
+
+    .logo {
+        font-size: 26px !important;
+    }
 }
