--- a/styles/topnav.module.css
+++ b/styles/topnav.module.css
@@ -14,7 +14,7 @@
     line-height: 25.6px;
 }
 
-.navigation > ul {
+.navigation>ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,4 +26,60 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+}
+
+/* media screen 1000 */
+
+@media screen and (max-width:1180px) {
+    .topNavBar {
+        width: 1000px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 10px;
+        margin: auto;
+    }
+
+    .topNavBar * {
+        font-size: 15px;
+        color: #8A8A8A;
+        font-weight: 450;
+        line-height: 25.6px;
+    }
+
+    .navigation>ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 35px;
+    }
+
+    .auth {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 5px;
+    }
+
+}
+
+@media screen and (max-width:1000px) {
+    .topNavBar {
+        width: 100%;
+    }
+    .topNavBar * {
+        font-size: 14px;
+        color: #8A8A8A;
+        font-weight: 450;
+        line-height: 25.6px;
+    }
+
+    .navigation>ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 30px;
+    }
+
+
 }
