--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -51,6 +51,7 @@
 
 @media screen and (max-width:1180px) {
     .container {
+        padding: 0px 10px;
         display: flex;
         justify-content: space-between;
         width: 1000px;
