--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -73,6 +73,8 @@
     }
 }
 
-/* @media screen and (max-width:768px) {
-    .selectCat
-} */
+@media screen and (max-width:768px) {
+    .selectCategory {
+        width: 768px;
+    }
+}
