--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -1,10 +1,10 @@
-.profile__title {
+.profileTitle {
     display: flex;
     padding: 10px 0;
     margin: auto;
 }
 
-.Profile__section {
+.ProfileSection {
     gap: 19px;
     display: flex;
     width: 1180px;
@@ -12,14 +12,14 @@
     margin: auto;
 }
 
-.profile__card {
+.profileCard {
     width: 280px;
     height: 106px;
     background: #FFFFFF;
     border-radius: 20px;
 }
 
-.profile__right {
+.profileRight {
     width: 793px;
     height: 512px;
     background: #FFFFFF;
@@ -27,7 +27,7 @@
     padding: 27px 45px;
 }
 
-.profile__user {
+.profileUser {
     gap: 15px;
     width: 100%;
     height: 53px;
@@ -43,13 +43,13 @@
 
 }
 
-.profile__user:hover {
+.profileUser:hover {
     cursor: pointer;
     background-color: #E4B717;
     color: #FFFFFF;
 }
 
-.profile__order {
+.profileOrder {
     gap: 15px;
     width: 100%;
     height: 53px;
@@ -64,13 +64,13 @@
     transition: .5s ease-in-out;
 }
 
-.profile__order:hover {
+.profileOrder:hover {
     cursor: pointer;
     background-color: #E4B717;
     color: #FFFFFF;
 }
 
-.profile__close {
+.profileClose {
     display: flex;
     align-items: center;
     margin-top: 19px;
@@ -82,7 +82,7 @@
     gap: 15px;
 }
 
-.profile__upload {
+.profileUpload {
     display: flex;
     align-items: center;
 }
@@ -100,7 +100,7 @@
     display: flex;
 }
 
-.input__section {
+.inputSection {
     margin-top: 18.69px;
 }
 
@@ -133,7 +133,7 @@
     outline: none;
 }
 
-.profile__button {
+.profileButton {
     margin-left: 200px;
     margin-top: 36px;
     align-items: flex-end;
@@ -142,7 +142,7 @@
 
 }
 
-.profile__button button {
+.profileButton button {
     padding: 15px 47px;
     border: 1px solid #E4B717;
     filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
@@ -155,24 +155,24 @@
     font-size: 18px;
 }
 
-.profile__button button:active {
+.profileButton button:active {
     transform: scale(0.9);
 }
 
 @media screen and (max-width:1180px) {
-    .profile__title {
+    .profileTitle {
         width: 1000px;
         padding: 10px 10px;
     }
 
     
-    .Profile__section {
+    .ProfileSection {
         width: 1000px;
         padding: 10px 10px;
     } 
 
 
-    .profile__right {
+    .profileRight {
         width: 69%;
         padding: 27px 10px;
     }
@@ -187,8 +187,78 @@
         font-size: 17px;
     }
 
-    .profile__button button {
+    .profileButton button {
         padding: 15px 42px;
         font-size: 17px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .profileTitle {
+        width: 768px;
+        padding: 10px 10px;
+    }
+
+    .ProfileSection {
+        width: 768px;
+        padding: 10px 10px;
+    } 
+
+    .input {
+        margin-top: 10px;
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .profileUpload {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .inputSection {
+        margin-left: 55px;
+    }
+
+    .input input {
+        padding: 16px 28px;
+        width: 336px;
+        height: 49px;
+        background: #EFEFEF;
+        border-radius: 50px;
+        border: none;
+        font-weight: 400;
+        font-size: 17px;
+    }
+
+    .input p {
+        font-size: 15px;
+    }
+
+    .profileButton {
+        margin-left: 2px;
+        margin-top: 40px;
+        align-items: flex-end;
+        justify-content: flex-end;
+        display: flex;
+    }
+    .profileButton button {
+        padding: 15px 39px;
+        border: 1px solid #E4B717;
+        filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+        border-radius: 50px;
+        background: none;
+        cursor: pointer;
+        color: #E4B717;
+        transition: .2s ease;
+        font-weight: 700;
+        font-size: 16px;
+    }
+    
+
+    .profileRight {
+        height: 600px;
+        padding: 27px 10px;
     }
 }
