--- a/styles/company.module.css
+++ b/styles/company.module.css
@@ -118,7 +118,7 @@
     gap: 15px;
     justify-content: center;
     display: flex;
-    width: 1000px;
+    /* width: 1000px; */
     padding: 10px 0;
     margin: 56px auto;
     color: #8A8A8A;
@@ -126,4 +126,39 @@
 
 .carusel a {
     color: #888888;
+}
+
+@media screen and (max-width:1180px) {
+    .container {
+        width: 1000px;
+        padding: 10px 10px;
+        margin: auto;
+        justify-content: center;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .companyTitle {
+        width: 988px;
+    }
+
+    .card {
+        display: flex;
+        gap: 1.7%;
+        row-gap: 1rem;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .container {
+        width: 768px;
+    }
+
+    .companyTitle {
+        width: 748px;
+    }
+
 }
