--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -33,8 +33,8 @@
 
 .close {
   display: flex;
-  justify-content: end;
-  align-items: end;
+  justify-content: flex-end;
+  align-items: flex-end;
   width: 100%;
   padding-top: 20px;
   padding-right: 20px;
