--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -58,3 +58,22 @@
     border-radius: 50px;
     background: #E4B717;
 }
+
+@media screen and (max-width: 1000px) {
+    .card {
+        width: 32.2%;
+        border-radius: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 49.1%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .card {
+        width: 100%;
+    }
+}
