--- a/styles/categories.module.css
+++ b/styles/categories.module.css
@@ -55,3 +55,14 @@
   position: relative;
   top: 3px;
 }
+
+
+@media screen and (max-width: 1000px) {
+  .selectList {
+    display: none;
+  }
+  .container {
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+}
