--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -56,7 +56,7 @@
 .mainChat {
     display: flex;
     padding: 10px;
-    justify-content: end;
+    justify-content: flex-end;
     height: 78%;
     flex-direction: column;
 }
@@ -65,7 +65,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     gap: 0.3rem;
 }
 
