--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -9,7 +9,7 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 1180px;
+    width: 100%;
 }
 
 .container a {
@@ -40,4 +40,30 @@
 .links {
     display: flex;
     gap: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        width: fit-content;
+    }
+    .container {
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+    .center {
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: fit-content;
+    }
+    .last {
+        justify-content: center;
+        align-items: center;
+    }
 }
