--- a/styles/headerTabs.module.css
+++ b/styles/headerTabs.module.css
@@ -26,3 +26,12 @@
     font-size: 23px !important;
     line-height: 160% !important;
 }
+
+@media screen and (max-width:412px) {
+    .tabs {
+        flex-direction: column;
+    }
+    .tabs > button {
+        width: 180px;
+    }
+}
