--- a/styles/company.module.css
+++ b/styles/company.module.css
@@ -141,7 +141,7 @@
     }
 
     .companyTitle {
-        width: 988px;
+        width: 100%;
     }
 
     .card {
@@ -154,11 +154,10 @@
 
 @media screen and (max-width:768px) {
     .container {
-        width: 768px;
+        width: 100%;
     }
 
     .companyTitle {
-        width: 748px;
+        width: 100%;
     }
-
 }
