--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,21 +1,23 @@
 .footer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
 }
 
 .container {
     display: flex;
     justify-content: space-between;
-    width: 1180px;
+    width: 100%;
 }
 
 .container a {
     color: #8A8A8A;
     font-size: 16px;
 }
+
+
 
 .logo {
     text-transform: uppercase;
@@ -49,43 +51,27 @@
     gap: 10px;
 }
 
-@media screen and (max-width:1180px) {
+@media screen and (max-width: 768px) {
     .container {
-        padding: 0px 10px;
-        display: flex;
-        justify-content: space-between;
-        width: 1000px;
-    }
-
-    .navigation {
-        gap: 5px;
+        width: fit-content;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .center {
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: fit-content;
     }
 
     .last {
-        display: flex;
-        gap: 5px;
-        flex-direction: column;
-    }
-
-    .links {
-        display: flex;
-        gap: 5px;
-    }
-
-    .last h3 {
-        font-size: 17px;
-    }
-
-    .logo {
-        font-size: 26px !important;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .container {
-        width: 768px;
+        justify-content: center;
+        align-items: center;
     }
 }
