--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 50px 20px;
 }
 
 .container {
