--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 10px 0;
     margin: auto;
+    width: 1180px;
 }
 
 .ProfileSection {
@@ -195,12 +196,12 @@
 
 @media screen and (max-width:768px) {
     .profileTitle {
-        width: 768px;
+        width: 100%;
         padding: 10px 10px;
     }
 
     .ProfileSection {
-        width: 768px;
+        width: 100%;
         padding: 10px 10px;
     } 
 
@@ -239,8 +240,8 @@
     .profileButton {
         margin-left: 2px;
         margin-top: 40px;
-        align-items: flex-end;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
         display: flex;
     }
     .profileButton button {
@@ -253,12 +254,34 @@
         color: #E4B717;
         transition: .2s ease;
         font-weight: 700;
-        font-size: 16px;
+        font-size: 14.5px;
     }
     
 
     .profileRight {
         height: 600px;
-        padding: 27px 10px;
+        padding: 27px 0px;
     }
+
 }
+
+@media screen and (max-width:480px) {
+    .profileTitle {
+        width: 100%;
+    }
+
+    .profileRight {
+        width: 100%;
+    }
+
+    .profileCard {
+        display: none;
+    }
+    .profileClose {
+        display: none;
+    }
+
+    .ProfileSection {
+        gap: 0;
+    }
+} 
