category responsive 360px thas is all

--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -338,3 +338,19 @@
         border-top-right-radius: 20px;
     }
 }
+
+
+@media screen and (max-width:480px) {
+    .cardSection {
+        width: 100%;
+        display: block;
+    }
+
+    .phone {
+        width: 100%;
+    }
+
+    .sectionRight>a {
+        width: 100%;
+    }
+}
