--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -135,7 +135,7 @@
   .search {
     width: 50%;
   }
-  
+
   .image a {
     font-size: 15px;
   }
@@ -148,7 +148,7 @@
     display: none;
   }
 
-} 
+}
 
 @media screen and (max-width:480px) {
   .container {
@@ -159,7 +159,7 @@
   .search {
     width: 45%;
   }
-  
+
   .image a {
     font-size: 14px;
   }
@@ -172,5 +172,14 @@
     display: none;
   }
 
-} 
+}
 
+@media screen and (max-width:360px) {
+  .container {
+    width: 100%;
+  }
+
+  .search {
+    display: none;
+  }
+}
