--- a/styles/company.module.css
+++ b/styles/company.module.css
@@ -217,3 +217,60 @@
         font-size: 14px;
     }
 } 
+
+
+
+@media screen and (max-width:360px) {
+    .container {
+        width: 100%;
+    }
+
+    .card{
+        display: flex;
+        gap: 1.7%;
+        row-gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .card a {
+        width: 100% !important;
+    }
+
+    .companyTitle {
+        width: 100%;
+        padding: 8px 10px;
+    }    
+    
+    .profile h1 {
+        font-weight: 700;
+        font-size: 11px;
+    }
+
+    .profile p {
+        font-size: 11px;
+    }
+
+    .companyProfile button {
+        padding: 8px 10px;
+        background: #E4B717;
+        box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
+        border-radius: 50px;
+        font-weight: 700;
+        font-size: 11px;
+        line-height: 160%;
+        color: #FFFFFF;
+    }
+
+    .profileSection {
+        gap: 5px;
+    }
+
+    .companyDescrip {
+        margin-top: 15px;
+        font-size: 14px;
+    }
+    
+    .companyDescrip p:nth-child(2) {
+        font-size: 13px;
+    }
+} 
