--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -285,3 +285,41 @@
         gap: 0;
     }
 } 
+
+@media screen and (max-width:360px) {
+    .profileTitle {
+        width: 100%;
+    }
+
+    .profileRight {
+        width: 100%;
+    }
+
+    .ProfileSection {
+        gap: 0;
+    }
+
+    .inputSection {
+        margin-left: 20px;
+    }
+
+    .input input {
+        padding: 16px 28px;
+        width: 300px;
+    }
+
+
+    .profileButton button {
+        padding: 15px 19px;
+        border: 1px solid #E4B717;
+        filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
+        border-radius: 50px;
+        background: none;
+        cursor: pointer;
+        color: #E4B717;
+        transition: .2s ease;
+        font-weight: 700;
+        font-size: 13px;
+    }
+
+} 
