--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -3,6 +3,18 @@
     padding: 10px 0;
     margin: auto;
     width: 1180px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.profileBurger {
+    display: none;
+    padding: 10px;
+    border: 1px solid #d9d9d9;
+    border-radius: 50%;
+    cursor: pointer;
+
 }
 
 .ProfileSection {
@@ -166,11 +178,11 @@
         padding: 10px 10px;
     }
 
-    
+
     .ProfileSection {
         width: 1000px;
         padding: 10px 10px;
-    } 
+    }
 
 
     .profileRight {
@@ -182,7 +194,7 @@
         width: 316px;
         font-size: 17px;
     }
-    
+
 
     .input p {
         font-size: 17px;
@@ -203,7 +215,7 @@
     .ProfileSection {
         width: 100%;
         padding: 10px 10px;
-    } 
+    }
 
     .input {
         margin-top: 10px;
@@ -244,6 +256,7 @@
         justify-content: center;
         display: flex;
     }
+
     .profileButton button {
         padding: 15px 39px;
         border: 1px solid #E4B717;
@@ -256,7 +269,7 @@
         font-weight: 700;
         font-size: 14.5px;
     }
-    
+
 
     .profileRight {
         height: 600px;
@@ -270,6 +283,10 @@
         width: 100%;
     }
 
+    .profileBurger {
+        display: block;
+    }
+
     .profileRight {
         width: 100%;
     }
@@ -277,6 +294,7 @@
     .profileCard {
         display: none;
     }
+
     .profileClose {
         display: none;
     }
@@ -284,7 +302,7 @@
     .ProfileSection {
         gap: 0;
     }
-} 
+}
 
 @media screen and (max-width:360px) {
     .profileTitle {
@@ -322,4 +340,4 @@
         font-size: 13px;
     }
 
-} 
+}
